# titiler-pgstac

./: .bumpversion.cfg  .env.example  .gitignore  .pre-commit-config.yaml  404.html  CHANGES.md  CONTRIBUTING.md  Dockerfile  Dockerfile.gunicorn  Dockerfile.pgstac  Dockerfile.stac  Dockerfile.uvicorn  LICENSE  README.md  docker-compose.yml  index.html  mkdocs.yml  nginx.conf  pyproject.toml  setup.cfg  setup.py  sitemap.xml  tox.ini  versions.json
.github/: dependabot.yml
.github/workflows/: ci.yml  deploy_mkdocs.yml
0.8.0/: 404.html  index.html  sitemap.xml
0.8.0/contributing/: index.html
0.8.0/intro/: index.html
0.8.0/item_endpoints/: index.html
0.8.0/mosaic_endpoints/: index.html
0.8.0/release-notes/: index.html
0.8.0/search/: search_index.json
0.8.0/tiler_factories/: index.html
0.8.0/tms_endpoints/: index.html
0.8.1/: 404.html  index.html  sitemap.xml
0.8.1/contributing/: index.html
0.8.1/intro/: index.html
0.8.1/item_endpoints/: index.html
0.8.1/mosaic_endpoints/: index.html  mosaic_endpoints.md
0.8.1/release-notes/: index.html  release-notes.md
0.8.1/search/: search_index.json
0.8.1/tiler_factories/: index.html
0.8.1/tms_endpoints/: index.html
0.8.2/: 404.html  index.html  sitemap.xml
0.8.2/contributing/: index.html
0.8.2/intro/: index.html
0.8.2/item_endpoints/: index.html
0.8.2/mosaic_endpoints/: index.html
0.8.2/release-notes/: index.html
0.8.2/search/: search_index.json
0.8.2/tiler_factories/: index.html  tiler_factories.md
0.8.2/tms_endpoints/: index.html
0.8.3/: 404.html  index.html  sitemap.xml
0.8.3/contributing/: index.html
0.8.3/intro/: index.html  intro.md
0.8.3/item_endpoints/: index.html
0.8.3/mosaic_endpoints/: index.html
0.8.3/release-notes/: index.html  release-notes.md
0.8.3/search/: search_index.json
0.8.3/tiler_factories/: index.html
0.8.3/tms_endpoints/: index.html
1.0.0/: 404.html  index.html  sitemap.xml
1.0.0/contributing/: index.html
1.0.0/endpoints/: index.html
1.0.0/intro/: index.html
1.0.0/release-notes/: index.html  release-notes.md
1.0.0/search/: search_index.json
1.0.0/tiler_factories/: index.html
1.0.0a1/: 404.html  index.html  sitemap.xml
1.0.0a1/contributing/: index.html
1.0.0a1/endpoints/: index.html
1.0.0a1/intro/: index.html
1.0.0a1/release-notes/: index.html
1.0.0a1/search/: search_index.json
1.0.0a1/tiler_factories/: index.html
1.0.0a2/: 404.html  index.html  sitemap.xml
1.0.0a2/contributing/: index.html
1.0.0a2/endpoints/: index.html
1.0.0a2/intro/: index.html
1.0.0a2/release-notes/: index.html  release-notes.md
1.0.0a2/search/: search_index.json
1.0.0a2/tiler_factories/: index.html
1.0.0a3/: 404.html  index.html  sitemap.xml
1.0.0a3/contributing/: index.html
1.0.0a3/endpoints/: index.html  index.md
1.0.0a3/intro/: index.html
1.0.0a3/release-notes/: index.html
1.0.0a3/search/: search_index.json
1.0.0a3/tiler_factories/: index.html
1.0.0a4/: 404.html  index.html  sitemap.xml
1.0.0a4/contributing/: index.html
1.0.0a4/endpoints/: index.html
1.0.0a4/intro/: index.html
1.0.0a4/release-notes/: index.html
1.0.0a4/search/: search_index.json
1.0.0a4/tiler_factories/: index.html
1.1.0/: 404.html  index.html  sitemap.xml
1.1.0/contributing/: index.html
1.1.0/endpoints/: index.html
1.1.0/intro/: index.html
1.1.0/release-notes/: index.html  release-notes.md
1.1.0/search/: search_index.json
1.1.0/tiler_factories/: index.html  tiler_factories.md
1.2.0/: 404.html  index.html  index.md  sitemap.xml
1.2.0/contributing/: index.html
1.2.0/endpoints/: index.html
1.2.0/intro/: index.html
1.2.0/release-notes/: index.html
1.2.0/search/: search_index.json
1.2.0/tiler_factories/: index.html
1.2.1/: 404.html  index.html  sitemap.xml
1.2.1/contributing/: index.html
1.2.1/endpoints/: index.html
1.2.1/intro/: index.html
1.2.1/release-notes/: index.html  release-notes.md
1.2.1/search/: search_index.json
1.2.1/tiler_factories/: index.html
1.2.2/: 404.html  index.html  sitemap.xml
1.2.2/contributing/: index.html
1.2.2/endpoints/: index.html
1.2.2/intro/: index.html
1.2.2/release-notes/: index.html  release-notes.md
1.2.2/search/: search_index.json
1.2.2/tiler_factories/: index.html
1.2.3/: 404.html  index.html  sitemap.xml
1.2.3/contributing/: index.html
1.2.3/endpoints/: index.html
1.2.3/intro/: index.html
1.2.3/release-notes/: index.html
1.2.3/search/: search_index.json
1.3.0/: 404.html  index.html  sitemap.xml
1.4.0/: 404.html  index.html  index.md  objects.inv  sitemap.xml
1.5.0/: 404.html  index.html  sitemap.xml
1.6.0/: 404.html  index.html  sitemap.xml
1.7.0/: 404.html  index.html  sitemap.xml
1.7.1/: 404.html  index.html  objects.inv  sitemap.xml
1.7.2/: 404.html  index.html  sitemap.xml
1.8.0/: 404.html  index.html  sitemap.xml
1.8.1/: 404.html  index.html  sitemap.xml
1.9.0/: 404.html  index.html  objects.inv  sitemap.xml
2.0.0/: 404.html  index.html  objects.inv  sitemap.xml
2.1.0/: 404.html  index.html  sitemap.xml
benchmark/: README.md  create_urls.py  urls.txt
collections_endpoints/: index.html
contributing/: contributing.md  index.html
demo/: demo.ipynb
docs/: advanced.md  endpoints.md  intro.md  mkdocs.yml  mosaic_endpoints.md  tiler_factories.md
intro/: index.html
item_endpoints/: index.html  item_endpoints.md
items_endpoints/: index.html
k8s/: secrets.yaml  service-account.yaml
latest/: 404.html  benchmark.html  index.html  sitemap.xml
latests/: 404.html  index.html  sitemap.xml
mosaic_endpoints/: index.html
release-notes/: index.html  release-notes.md
scripts/: collection.json  index.geojson  ingest_joplin.py
search/: search_index.json
searches_endpoints/: index.html
sql/: 999_mosaic.sql
tests/: __init__.py  conftest.py  test_collections.py  test_health.py  test_items.py  test_middleware.py  test_mosaic.py  test_optional_endpoints.py  test_reader.py  test_readonly.py  test_searches.py  test_titiler_pgstac.py
tiler_factories/: index.html
tms_endpoints/: index.html
(+767 files in other folders)
