[project]
name = "titiler-pgstac"
description = "Connect PgSTAC and TiTiler."
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
authors = [
    {name = "Vincent Sarago", email = "vincent@developmentseed.com"},
    {name = "David Bitner", email = "david@developmentseed.com"},
]
keywords = [
    "COG",
    "STAC",
    "MosaicJSON",
    "Fastapi",
    "Dynamic tile server",
    "pgSTAC",
]
classifiers = [
    "Intended Audience :: Information Technology",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: GIS",
]
dependencies = [
    "titiler.core>=0.24,<0.25",
    "titiler.mosaic>=0.24,<0.25",
    "cql2>=0.3.6",
    "pydantic>=2.4,<3.0",
    "pydantic-settings~=2.0",
]
dynamic = ["version"]

[project.optional-dependencies]
# https://www.psycopg.org/psycopg3/docs/api/pq.html#pq-module-implementations
psycopg = [  # pure python implementation
    "psycopg[pool]"
]
psycopg-c = [  # C implementation of the libpq wrapper
    "psycopg[c,pool]"
]

psycopg-binary = [  # pre-compiled C implementation
    "psycopg[binary,pool]"
]
telemetry = [
    "opentelemetry-api",
    "opentelemetry-sdk",
    "opentelemetry-instrumentation-fastapi",
    "opentelemetry-instrumentation-logging",
    "opentelemetry-exporter-otlp",
]
dev = [
    "pre-commit",
    "bump-my-version",
]
test = [
    "pytest",
    "pytest-cov",
    "pytest-asyncio",
    "httpx",
    "pypgstac>=0.7,<=0.10",
    "pytest-postgresql",
]
docs = [
    "mkdocs>=1.4.3",
    "mkdocs-jupyter>=0.24.5",
    "mkdocs-material[imaging]>=9.5",
    "griffe-inherited-docstrings>=1.0.0",
    "mkdocstrings[python]>=0.25.1",
    "mike~=2.0",
]

[project.urls]
Homepage = 'https://stac-utils.github.io/titiler-pgstac/'
Documentation = "https://stac-utils.github.io/titiler-pgstac/"
Issues = "https://github.com/stac-utils/titiler-pgstac/issues"
Source = "https://github.com/stac-utils/titiler-pgstac"
Changelog = "https://stac-utils.github.io/titiler-pgstac/release-notes/"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm.version]
source = "file"
path = "titiler/pgstac/__init__.py"

[tool.pdm.build]
includes = ["titiler/pgstac"]
excludes = ["tests/", "**/.mypy_cache", "**/.DS_Store"]

[tool.coverage.run]
branch = true
parallel = true

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]

[tool.isort]
profile = "black"
known_first_party = ["titiler"]
known_third_party = [
    "rasterio",
    "morecantile",
    "rio_tiler",
    "cogeo_mosaic",
    "geojson_pydantic",
]
default_section = "THIRDPARTY"

[tool.ruff.lint]
select = [
    "D1",  # pydocstyle errors
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # flake8
    "C",  # flake8-comprehensions
    "B",  # flake8-bugbear
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "B905",  # ignore zip() without an explicit strict= parameter, only support with python >3.10
]
exclude = [
    "*.ipynb"
]

[tool.mypy]
no_implicit_optional = true
strict_optional = true
namespace_packages = true
explicit_package_bases = true

[tool.pytest.ini_options]
filterwarnings = [
    "ignore::rasterio.errors.NotGeoreferencedWarning",
]

[tool.bumpversion]
current_version = "1.9.0"
search = "{current_version}"
replace = "{new_version}"
regex = false
tag = true
commit = true
tag_name = "{new_version}"

[[tool.bumpversion.files]]
filename = "titiler/pgstac/__init__.py"
search = '__version__ = "{current_version}"'
replace = '__version__ = "{new_version}"'
